fix: double scroll on layout admin fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -65,7 +65,6 @@
   html {
     scroll-behavior: smooth;
     overflow-x: hidden;
-    height: 100%;
   }
   body {
     @apply bg-background text-foreground;
